--- a/templates/ax25/ax25d.conf
+++ b/templates/ax25/ax25d.conf
@@ -6,18 +6,18 @@
 #
 # Please note that the programs node and finger are not part of ax25-tools.
 #
-#[CALLSIGN-N VIA ax0]
+#[CALLSIGN-1 VIA ax0]
 #NOCALL   * * * * * *  L
 #default  * * * * * *  -	root  /usr/sbin/ttylinkd	ttylinkd
 #parameters_extAX25 VC-wait-login VC-disc-on-linkfailure-msg VC-log-connections
 #
 #
-[CALLSIGN-N VIA ax0]
+[CALLSIGN-1 VIA ax0]
 NOCALL   * * * * * *  L
 default  * * * * * *  -	root  /usr/sbin/ax25-node	ax25-node
 #
 #
-#[CALLSIGN-N VIA ax0]
+#[CALLSIGN-1 VIA ax0]
 #NOCALL   * * * * * *  L
 #default  * * * * * *  -	root  /usr/sbin/node	node
 #
