--- a/templates/ax25/ax25ipd.conf
+++ b/templates/ax25/ax25ipd.conf
@@ -14,7 +14,7 @@ mode tnc
 # tnc mode, the callsign is currently optional, but this may change
 # in the future! (2 calls if using dual port kiss)
 #
-mycall CALLSIGN-N
+mycall CALLSIGN-1
 # mycall2 vk5xxx-5
 #
 # In digi mode, you may use an alias. (2 for dual port)
