--- a/templates/ax25/node.conf
+++ b/templates/ax25/node.conf
@@ -12,11 +12,11 @@ ConnTimeout	14400
 
 # Visible hostname. Will be shown at telnet login.
 #
-HostName	CALLSIGN-N
+HostName	CALLSIGN-1
 
 # Node ID.
 #
-NodeId		MYNODE:CALLSIGN-N
+NodeId		MYNODE:CALLSIGN-1
 #NodeId		\033[01;31m***\033[0m
 
 # ReConnect flag.
