--- a/templates/ax25/rxecho.conf
+++ b/templates/ax25/rxecho.conf
@@ -1,12 +1,12 @@
 # /etc/ax25/rxecho.conf
 #
 # This means that packets received on port '1' are copied to port '2' if they
-# are destined to CALLSIGN-N or CALLSIGN-2. All packets from port '2' are copied
+# are destined to CALLSIGN-1 or CALLSIGN-2. All packets from port '2' are copied
 # to port '1'.
 #
 # There may be empty lines and an arbirary amount of white space around the
 # tokens but the callsign field must not have any spaces in it. There can be
 # up to MAXCALLS callsigns in the callsign field.
 #
-1	2	CALLSIGN-N,CALLSIGN-2
+1	2	CALLSIGN-1,CALLSIGN-2
 2	1	*
